--- a/HybridCloudApp/Kubernetes/Frontend/Mariadb/mariadb_service_nodeport.yaml
+++ b/HybridCloudApp/Kubernetes/Frontend/Mariadb/mariadb_service_nodeport.yaml
@@ -7,7 +7,9 @@ metadata:
     app: iot-backend
 spec:
   ports:
-    - port: 3306
+    - protocol: TCP
+      port: 3306
+      targetPort: 3306
   selector:
     app: iot-backend
     tier: mariadb
