--- a/HybridCloudApp/Kubernetes/Frontend/Mariadb/mariadb_service_nodeport.yaml
+++ b/HybridCloudApp/Kubernetes/Frontend/Mariadb/mariadb_service_nodeport.yaml
@@ -9,7 +9,7 @@ spec:
   ports:
     - protocol: TCP
       port: 3306
-      targetPort: 3306
+      nodePort: 3306
   selector:
     app: iot-backend
     tier: mariadb
