--- a/HybridCloudApp/Backend/MQTT_DB_Plugin_Service/settings.ini
+++ b/HybridCloudApp/Backend/MQTT_DB_Plugin_Service/settings.ini
@@ -8,7 +8,7 @@ THING_CERT_FILE: 426080cbd5-certificate.pem.crt
 THING_PRIVATE_KEY: 426080cbd5-private.pem.key
 
 [DB_SETTINGS]
-DB_HOST: localhost
+DB_HOST: mariadb-service
 DB_PORT: 3306
 DB_NAME: sensor_db
 DB_USER: root
