--- a/HybridCloudApp/Kubernetes/Backend/MQTT_DB_Agent/mqtt_db_agent_deployment.yaml
+++ b/HybridCloudApp/Kubernetes/Backend/MQTT_DB_Agent/mqtt_db_agent_deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   name: iot-backend-mqtt-db-agent
   labels:
     app: iot-backend
+    tier: mqtt-db-agent
 spec:
   selector:
     matchLabels:
