--- a/HybridCloudApp/Kubernetes/Backend/REST_API_Agent/rest_api_agent.yaml
+++ b/HybridCloudApp/Kubernetes/Backend/REST_API_Agent/rest_api_agent.yaml
@@ -21,4 +21,4 @@ spec:
     spec:
       containers:
       - image: pradeesi/rest_api_agent:latest
-        name: rest_api_agent
+        name: rest-api-agent
