--- a/HybridCloudApp/Backend/REST_API_Service/Dockerfile
+++ b/HybridCloudApp/Backend/REST_API_Service/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /usr/src/app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN pip install requests
+
 COPY . .
 
 CMD [ "python", "./api_service.py" ]
