--- a/HybridCloudApp/Documentation/mkdocs.yml
+++ b/HybridCloudApp/Documentation/mkdocs.yml
@@ -3,3 +3,5 @@ site_name: Hybrid Cloud IoT App
 nav:
   - AWS IoT Core Configuration: 'AWS_IoT.md'
   - Raspberry Pi with Humidity and Temperature Sensor Configuration: 'RaPi_with_Sensor.md'
+
+theme: readthedocs
