--- a/HybridCloudApp/Kubernetes/Backend/Network_Policies/mqtt_db_agent_to_mariadb_network_policy.yaml
+++ b/HybridCloudApp/Kubernetes/Backend/Network_Policies/mqtt_db_agent_to_mariadb_network_policy.yaml
@@ -4,8 +4,6 @@ metadata:
   name: test-network-policy
   namespace: default
 spec:
-  podSelector:
-    matchLabels:
-      app: iot-backend
+  podSelector: {}
   policyTypes:
   - Ingress
