--- a/HybridCloudApp/Kubernetes/Backend/Network_Policies/mqtt_db_agent_to_mariadb_network_policy.yaml
+++ b/HybridCloudApp/Kubernetes/Backend/Network_Policies/mqtt_db_agent_to_mariadb_network_policy.yaml
@@ -3,6 +3,8 @@ kind: NetworkPolicy
 metadata:
   name: default-deny
 spec:
-  podSelector: {}
+  podSelector:
+    app: iot-backend
+    tier: mariadb
   policyTypes:
   - Ingress
