--- a/HybridCloudApp/Kubernetes/Backend/Network_Policies/mqtt_db_agent_to_mariadb_network_policy.yaml
+++ b/HybridCloudApp/Kubernetes/Backend/Network_Policies/mqtt_db_agent_to_mariadb_network_policy.yaml
@@ -4,7 +4,8 @@ metadata:
   name: default-deny
 spec:
   podSelector:
-    app: iot-backend
-    tier: mariadb
+    matchLabels:
+      app: iot-backend
+      tier: mariadb
   policyTypes:
   - Ingress
