--- a/HybridCloudApp/Kubernetes/Backend/Network_Policies/mqtt_db_agent_to_mariadb_network_policy.yaml
+++ b/HybridCloudApp/Kubernetes/Backend/Network_Policies/mqtt_db_agent_to_mariadb_network_policy.yaml
@@ -3,9 +3,6 @@ kind: NetworkPolicy
 metadata:
   name: default-deny
 spec:
-  podSelector:
-    matchLabels:
-      app: iot-backend
-      tier: mariadb
+  podSelector: {}
   policyTypes:
   - Ingress
