--- a/HybridCloudApp/Kubernetes/Backend/Network_Policies/rest_api_agent_to_mariadb_network_policy.yaml
+++ b/HybridCloudApp/Kubernetes/Backend/Network_Policies/rest_api_agent_to_mariadb_network_policy.yaml
@@ -1,21 +1,12 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: test-network-policy
+  name: rest-api-agent-network-policy
   namespace: default
 spec:
   podSelector:
     matchLabels:
-      app: iot-backend
-      tier: mariadb
+      app: iot-backend-rest-api-agent
+      tier: rest-api-agent
   policyTypes:
   - Ingress
-  ingress:
-  - from:
-    - podSelector:
-        matchLabels:
-          app: iot-backend-rest-api-agent
-          tier: rest-api-agent
-    ports:
-    - protocol: TCP
-      port: 3306
