--- a/HybridCloudApp/Kubernetes/Backend/Network_Policies/deny_all_rest_api_agent.yaml
+++ b/HybridCloudApp/Kubernetes/Backend/Network_Policies/deny_all_rest_api_agent.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: rest-api-agent-network-policy
+  name: deny-all-rest-api-agent
   namespace: default
 spec:
   podSelector:
