--- a/HybridCloudApp/Kubernetes/Backend/on-prem-roles.yaml
+++ b/HybridCloudApp/Kubernetes/Backend/on-prem-roles.yaml
@@ -28,7 +28,7 @@ subjects:
     apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: student17
+  name: student17-role
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
